<resources>
    <string name="app_name">VkApp</string>
    <string name="splash">Splash</string>
    <string name="profile_view">Profile View</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DataFormat">DD.MM.YYYY</string>
    <string name="Phone">Телефон</string>
    <string name="city">Город</string>
    <string name="status">Статус</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
</resources>
