<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/editProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Изменение профиля"
            app:titleMarginBottom="8dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/editProgressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileEditImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/profileEditImageView"
            app:layout_constraintTop_toTopOf="@+id/profileEditImageView"
            tools:text="Виктор" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/profileEditImageView"
            app:layout_constraintTop_toBottomOf="@+id/editFirstName"
            tools:text="Косовских" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editStatusInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/status"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileEditImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileStatusEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_info_black_24dp"
                android:drawablePadding="8dp"
                android:inputType="textCapWords"
                tools:text="Текущий статус" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTownInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/city"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStatusInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/townEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_city_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"
                android:inputType="textCapWords"
                tools:text="Город" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPhoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Phone"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTownInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_phone_white_24dp"
                android:drawablePadding="8dp"
                android:inputType="number"
                tools:text="+7(999)-495-46-90" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editBirthdayInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/DataFormat"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPhoneInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdayEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_date_white_24dp"
                android:drawablePadding="8dp"
                android:inputType="number"
                tools:text="27.03.1997" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>